--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="./favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="./logo192.png"/><link rel="manifest" href="./manifest.json"/><title>React App</title><script defer="defer" src="./static/js/main.61a7c7b5.js"></script><link href="./static/css/main.19577363.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="./favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#6366f1"/><title>Harish Yerraguntla - Full-Stack Software Engineer | React/Next.js Specialist</title><meta name="title" content="Harish Yerraguntla - Full-Stack Software Engineer | React/Next.js Specialist"/><meta name="description" content="Full-stack software engineer with 5+ years specializing in React/Next.js and Vue.js development. Expert in building scalable applications serving 2M+ users with 99.9% uptime."/><meta name="keywords" content="Harish Yerraguntla, Full Stack Developer, React Developer, Next.js, Vue.js, JavaScript, TypeScript, Software Engineer, Frontend Developer, Backend Developer, New York"/><meta name="author" content="Harish Yerraguntla"/><meta name="robots" content="index, follow"/><link rel="canonical" href="https://nandu064.github.io/portfolio/"/><meta property="og:type" content="website"/><meta property="og:url" content="https://nandu064.github.io/portfolio/"/><meta property="og:title" content="Harish Yerraguntla - Full-Stack Software Engineer | React/Next.js Specialist"/><meta property="og:description" content="Full-stack software engineer with 5+ years specializing in React/Next.js and Vue.js development. Expert in building scalable applications serving 2M+ users with 99.9% uptime."/><meta property="og:image" content="https://nandu064.github.io/portfolio/portfolio_thumbnail.png"/><meta property="og:image:width" content="1200"/><meta property="og:image:height" content="630"/><meta property="og:image:alt" content="Harish Yerraguntla - Full-Stack Software Engineer Portfolio"/><meta property="og:site_name" content="Harish Yerraguntla Portfolio"/><meta property="og:locale" content="en_US"/><meta property="twitter:card" content="summary_large_image"/><meta property="twitter:url" content="https://nandu064.github.io/portfolio/"/><meta property="twitter:title" content="Harish Yerraguntla - Full-Stack Software Engineer | React/Next.js Specialist"/><meta property="twitter:description" content="Full-stack software engineer with 5+ years specializing in React/Next.js and Vue.js development. Expert in building scalable applications serving 2M+ users."/><meta property="twitter:image" content="https://nandu064.github.io/portfolio/portfolio_thumbnail.png"/><meta property="twitter:image:alt" content="Harish Yerraguntla - Full-Stack Software Engineer Portfolio"/><meta name="geo.region" content="US-NY"/><meta name="geo.placename" content="New York"/><meta name="geo.position" content="40.7128;-74.0060"/><meta name="ICBM" content="40.7128, -74.0060"/><script type="application/ld+json">{
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Harish Yerraguntla",
+      "jobTitle": "Full-Stack Software Engineer",
+      "description": "Full-stack software engineer specializing in React/Next.js and Vue.js development",
+      "url": "https://nandu064.github.io/portfolio/",
+      "email": "yerraguntlaharish98@gmail.com",
+      "telephone": "+1-205-736-5808",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "New York",
+        "addressRegion": "NY",
+        "addressCountry": "US"
+      },
+      "sameAs": [
+        "https://github.com/nandu064",
+        "https://www.linkedin.com/in/harish-yerraguntla-70695416b/"
+      ],
+      "knowsAbout": [
+        "React.js", "Next.js", "Vue.js", "JavaScript", "TypeScript", 
+        "Node.js", "Python", "Full-Stack Development", "Frontend Development"
+      ]
+    }</script><link rel="apple-touch-icon" href="./logo192.png"/><link rel="manifest" href="./manifest.json"/><script defer="defer" src="./static/js/main.61a7c7b5.js"></script><link href="./static/css/main.19577363.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
