Fixed the resume AND uploaded latest version

--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/logo.svg" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0891b2" />
 
     <!-- Primary Meta Tags -->
-    <title>Harish Yerraguntla — Frontend Engineer | React · Vue.js · Next.js</title>
-    <meta name="title" content="Harish Yerraguntla — Frontend Engineer | React · Vue.js · Next.js" />
+    <title>Harish Yerraguntla — Full-Stack Engineer | React · Vue.js · Next.js</title>
+    <meta name="title" content="Harish Yerraguntla — Full-Stack Engineer | React · Vue.js · Next.js" />
     <meta
       name="description"
-      content="Frontend Engineer with 5+ years building production React, Next.js, and Vue.js applications. Creator of Sniplink (URL shortener with Edge analytics) and CSV Plot Studio. Served 2M+ users, 90+ Lighthouse scores, 99.9% uptime."
+      content="Full-Stack Engineer with 5+ years building production React, Next.js, and Vue.js applications. Creator of Sniplink (URL shortener with Edge analytics) and CSV Plot Studio. Served 2M+ users, 90+ Lighthouse scores, 99.9% uptime."
     />
     <meta
       name="keywords"
-      content="Harish Yerraguntla, Frontend Engineer, React Developer, Vue.js Developer, Next.js Developer, JavaScript, TypeScript, Full Stack Developer, Software Engineer, New York, Sniplink, CSV Plot Studio, Portfolio, Plotly.js, D3.js, Data Visualization, Node.js, Python"
+      content="Harish Yerraguntla, Full-Stack Engineer, React Developer, Vue.js Developer, Next.js Developer, JavaScript, TypeScript, Full Stack Developer, Software Engineer, New York, Sniplink, CSV Plot Studio, Portfolio, Plotly.js, D3.js, Data Visualization, Node.js, Python"
     />
     <meta name="author" content="Harish Yerraguntla" />
     <meta name="robots" content="index, follow" />
@@ -32,28 +33,28 @@
     <!-- Open Graph / Social -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://nandu064.github.io/portfolio/" />
-    <meta property="og:title" content="Harish Yerraguntla — Frontend Engineer | React · Vue.js · Next.js" />
+    <meta property="og:title" content="Harish Yerraguntla — Full-Stack Engineer | React · Vue.js · Next.js" />
     <meta
       property="og:description"
-      content="Frontend Engineer with 5+ years building production React, Next.js, and Vue.js applications. Creator of Sniplink and CSV Plot Studio. Served 2M+ users with 90+ Lighthouse scores."
+      content="Full-Stack Engineer with 5+ years building production React, Next.js, and Vue.js applications. Creator of Sniplink and CSV Plot Studio. Served 2M+ users with 90+ Lighthouse scores."
     />
     <meta property="og:image" content="https://nandu064.github.io/portfolio/portfolio_thumbnail.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="Harish Yerraguntla — Frontend Engineer Portfolio" />
+    <meta property="og:image:alt" content="Harish Yerraguntla — Full-Stack Engineer Portfolio" />
     <meta property="og:site_name" content="Harish Yerraguntla Portfolio" />
     <meta property="og:locale" content="en_US" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://nandu064.github.io/portfolio/" />
-    <meta name="twitter:title" content="Harish Yerraguntla — Frontend Engineer | React · Vue.js · Next.js" />
+    <meta name="twitter:title" content="Harish Yerraguntla — Full-Stack Engineer | React · Vue.js · Next.js" />
     <meta
       name="twitter:description"
-      content="Frontend Engineer with 5+ years building production React, Next.js, and Vue.js apps. Creator of Sniplink URL shortener and CSV Plot Studio. 2M+ users served."
+      content="Full-Stack Engineer with 5+ years building production React, Next.js, and Vue.js apps. Creator of Sniplink URL shortener and CSV Plot Studio. 2M+ users served."
     />
     <meta name="twitter:image" content="https://nandu064.github.io/portfolio/portfolio_thumbnail.png" />
-    <meta name="twitter:image:alt" content="Harish Yerraguntla — Frontend Engineer Portfolio" />
+    <meta name="twitter:image:alt" content="Harish Yerraguntla — Full-Stack Engineer Portfolio" />
     <meta name="twitter:creator" content="@harishyerraguntla" />
 
     <!-- Geo tags -->
@@ -68,8 +69,8 @@
       "@context": "https://schema.org",
       "@type": "Person",
       "name": "Harish Yerraguntla",
-      "jobTitle": "Frontend Engineer",
-      "description": "Frontend Engineer with 5+ years building production React, Next.js, and Vue.js applications serving 2M+ users. Creator of Sniplink (URL shortener with Edge analytics) and CSV Plot Studio.",
+      "jobTitle": "Full-Stack Engineer",
+      "description": "Full-Stack Engineer with 5+ years building production React, Next.js, and Vue.js applications serving 2M+ users. Creator of Sniplink (URL shortener with Edge analytics) and CSV Plot Studio.",
       "url": "https://nandu064.github.io/portfolio/",
       "email": "yerraguntlaharish98@gmail.com",
       "telephone": "+1-205-736-5808",
@@ -108,7 +109,7 @@
       "@type": "WebSite",
       "name": "Harish Yerraguntla Portfolio",
       "url": "https://nandu064.github.io/portfolio/",
-      "description": "Portfolio of Harish Yerraguntla — Frontend Engineer specializing in React, Vue.js, and Next.js",
+      "description": "Portfolio of Harish Yerraguntla — Full-Stack Engineer specializing in React, Vue.js, and Next.js",
       "author": {
         "@type": "Person",
         "name": "Harish Yerraguntla"
